fix: remove the div wrap

--- a/frontend/packages/erd-core/src/features/erd/components/ERDContent/components/TableNode/TableColumnList/TableColumn/TableColumn.module.css
+++ b/frontend/packages/erd-core/src/features/erd/components/ERDContent/components/TableNode/TableColumnList/TableColumn/TableColumn.module.css
@@ -10,7 +10,8 @@
   line-height: normal;
   border-bottom: 1px solid var(--node-border);
   position: relative;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color var(--default-hover-animation-duration)
+    var(--default-timing-function);
 }
 
 .columnWrapper:last-child {
@@ -24,7 +25,8 @@
 
 .columnWrapper.highlightRelatedColumn {
   background-color: var(--primary-overlay-10);
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color var(--default-hover-animation-duration)
+    var(--default-timing-function);
 }
 
 .columnWrapper.highlightRelatedColumn:hover {
